# decs

./: CMakeLists.txt  INSTALL.txt  ProjectHome.md  README.txt  dancing-links.tex  decs.tcp  distributed_computing.tex  implementation.tex  introduction.tex  local.bib  non-recursive-dlx.tcp  nqueens.bib
branches/decs/non-recursive/: COPYING.txt  INSTALL.txt
branches/decs/non-recursive/dance/: dance.cpp
branches/decs/non-recursive/dance/examples/: queens14.decs  queens16.decs  queens8.decs  queens9.decs  tiny.decs
branches/decs/non-recursive/debian/: copyright  files  rules
branches/decs/non-recursive/decs/: decs.pb.cc  decs.proto  dlx.h  sbcolumn.cpp
branches/decs/non-recursive/degen/: CMakeLists.txt  degen.cpp  nqdecs.cpp
branches/decs/plugin-arch/debian/: deb_build.sh
branches/decs/plugin-arch/decs/: decs.pb.h  dfileio.cpp  dfileio.h  sbcolumn.h  sbnode.cpp
dance/: .cproject  dance.cpp
dance/examples/: CMakeLists.txt  README.txt  micro.decs  queens14.decs  queens16.decs  queens19.decs  queens20.decs  queens22.decs  queens4.decs  queens6.decs  queens8.decs
degen/: .project
dlx/: column.h  dlx.cpp  node.h  util.cpp
gpensim/: CHANGELOG.txt  client_def.m  conn_pro.m  decs_msf.m  network_def.m  server_def.m
images/: doubly-linked-list-del.asy  doubly-linked-list.asy  headerformat.eps  matrix-links.asy  save.plt  search-tree-ex.dot  test-no-s-heuristic.txt
non-recursive/: CMakeLists.txt
non-recursive/boinc/: CMakeLists.txt
non-recursive/dance/examples/: CMakeLists.txt  micro.decs  queens17.decs  queens18.decs  queens19.decs  queens20.decs  queens26.decs  queens3.decs  queens5p1.decs  queens5p2.decs  queens5p3.decs  queens7.decs
non-recursive/debian/: control
non-recursive/decs/: CMakeLists.txt  decs.pb.h  dformat.h  sbmatrix.cpp  type.h
non-recursive/protobuf/: CMakeLists.txt  config.h.in
nqdecs/: nqdecs.cpp
plugin-arch/dance/: dance.cpp
plugin-arch/dance/examples/: knuthx.decs  queens4.decs
plugin-arch/debian/: changelog
plugin-arch/decs/: decs.proto  dformat.cpp  dlx.cpp
plugin-arch/degen/: nqdecs.h
report/: conclusion.tex  custom.bst  dancing-links.tex  dancing_links.tex  decs.tex  grid_computing.tex  implementation.tex  introduction.tex  local.bib  non-recursive-dlx.tex  testing.tex
report-1.0/: local.bib
report/images/: doubly-linked-list-del.asy  heuristic.plt  model.vsd  petri-model.vsd  test-queens.txt
report/models/: Architecture.vsd
src/: CMakeLists.txt  COPYING.txt
src/bdance/: CMakeLists.txt  bdance.cpp
src/boinc/: CMakeLists.txt
src/dance/: .project  CMakeLists.txt  dance.cpp
src/dance/examples/: CMakeLists.txt  README.txt  knuthx.decs  queens10.decs  queens11.decs  queens13.decs  queens14.decs  queens15.decs  queens17.decs  queens18.decs  queens19.decs  queens2.decs  queens20.decs  queens21.decs  queens23.decs  queens25.decs  queens26.decs  queens3.decs  queens5.decs  queens6.decs  queens9.decs
src/decs/: CMakeLists.txt  decs.pb.cc  decs.pb.h  dfileio.cpp  dfileio.h  dformat.cpp  dformat.h  dlx.cpp  dlx.h  sbcolumn.h  sbmatrix.cpp  sbmatrix.h  sbnode.cpp  sbnode.h  type.h
src/degen/: .cproject  .project  CMakeLists.txt  degen.cpp  nqdecs.cpp
src/dlx/: .cproject  .project  CMakeLists.txt  COPYING.txt  README.txt  column.cpp  column.h  dlx.cpp  dlx.h  node.cpp  node.h  util.cpp  util.h
src/nqdecs/: .cproject  .project  CMakeLists.txt  COPYING.txt  nqdecs.cpp
tags/dance-0.1/: README.txt
tags/dance-0.1/examples/: tiny.decs
tags/decs-0.1/dlx/: node.cpp
tags/decs-0.1/trunk/report/: algorithm.sty  conclusion.tex  dancing_links.tex  javadistalgo.sty  testing.tex
tags/decs-0.2/: COPYING.txt
tags/decs-0.2/dance/: .project  CMakeLists.txt  dance.cpp
tags/decs-0.2/dance/examples/: queens17.decs  queens18.decs  queens2.decs  queens24.decs  queens7.decs
tags/decs-0.2/degen/: .cproject  degen.cpp
tags/decs-0.2/dlx/: util.h
tags/decs-0.2/nqdecs/: .project
tags/gpensim-0.1/: README.txt  network_def.m  server_def.m  tTX_def.m
tags/gpensim-0.1.1/: CHANGELOG.txt  COPYING.txt  client_def.m  conn_pro.m  decs_msf.m
tags/libdlx-0.1/: util.h
tags/report-0.1/: abstract.tex  conclusion.tex  introduction.tex  local.bib  testing.tex
tags/report-0.2/: abstract.tex  dancing-links.tex  decs.tex  implementation.tex  introduction.tex  testing.tex
tags/report-1.0/: decs.tcp  testing.tex
tags/report-1.0/images/: test-s-heuristic.txt
trunk/gpensim/: COPYING.txt  README.txt  decs_msf.m  tTX_def.m
trunk/report/: abstract.tex  conclusion.tex  custom-r2.bst  dancing-links.tex  dancing_links.tex  decs.tex  distributed_computing.tex  implementation.tex  introduction.tex  local.bib  testing.tex
trunk/report-1.0/: javadistalgo.sty
trunk/report-1.0/images/: doubly-linked-list.asy  matrix-links.asy  queens.plt
trunk/report/images/: Architecture.vsd  heuristic.plt  matrix-links.asy  queens.plt  test-no-s-heuristic.txt  test-queens-no-heuristic.txt  test-queens.txt  test-s-heuristic.txt
trunk/report/models/: Architecture.vsd
trunk/src/: CMakeLists.txt  INSTALL.txt
trunk/src/bdance/: CMakeLists.txt  bdance.cpp
trunk/src/boinc/: CMakeLists.txt
trunk/src/dance/: .cproject  .project  CMakeLists.txt  COPYING.txt  README.txt  dance.cpp
trunk/src/dance/examples/: CMakeLists.txt  README.txt  queens10.decs  queens11.decs  queens12.decs  queens13.decs  queens15.decs  queens16.decs  queens2.decs  queens21.decs  queens22.decs  queens24.decs  queens25.decs  queens4.decs  queens5.decs  queens5p4.decs  queens5p5.decs  queens6.decs  queens7.decs  queens8.decs  tiny.decs
trunk/src/decs/: CMakeLists.txt  README.txt  decs.proto  dfileio.cpp  dfileio.h  dformat.cpp  dlx.cpp  dlx.h  sbcolumn.cpp  sbcolumn.h  sbmatrix.cpp  sbmatrix.h  sbnode.cpp  sbnode.h  type.h
trunk/src/degen/: .cproject  CMakeLists.txt  COPYING.txt  degen.cpp
trunk/src/dlx/: .cproject  .project  README.txt  column.cpp  column.h  dlx.cpp  dlx.h  file.cpp  file.h  node.cpp  node.h  util.cpp  util.h
trunk/src/nqdecs/: .cproject  CMakeLists.txt  nqdecs.h
trunk/src/protobuf/: CMakeLists.txt
(+5 files in other folders)
