install( FILES
	README.txt
	knuthx.decs
	tiny.decs	
	micro.decs
	queens5p1.decs
	queens5p2.decs
	queens5p3.decs
	queens5p4.decs
	queens5p5.decs
	queens2.decs
	queens3.decs
	queens4.decs
	queens5.decs
	queens6.decs
	queens7.decs
	queens8.decs
	queens9.decs
	queens10.decs
	queens11.decs
	queens12.decs
	queens13.decs
	queens14.decs
	queens15.decs
	queens16.decs
	queens17.decs
	queens18.decs
	queens19.decs
	queens20.decs
	queens21.decs
	queens22.decs
	queens23.decs
	queens24.decs
	queens25.decs
	queens26.decs
	DESTINATION ${DATA_OUTPUT_PATH}/examples
)
